--- a/.gitignore
+++ b/.gitignore
@@ -223,4 +223,7 @@ gradle-app.setting
 # Java heap dump
 *.hprof
 
+application-prod.yml
+application-test.yml
+
 # End of https://www.toptal.com/developers/gitignore/api/java,gradle,intellij+all,macos,windows,visualstudiocode
