.gitignore 내용 추가

--- a/.gitignore
+++ b/.gitignore
@@ -223,6 +223,8 @@ gradle-app.setting
 # Java heap dump
 *.hprof
 
+application-dev.yml
+application-test.yml
 
 
 # End of https://www.toptal.com/developers/gitignore/api/java,gradle,intellij+all,macos,windows,visualstudiocode
