ec2 변경으로 인한 설정파일 수정

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -6,8 +6,8 @@ on:
       - main
 
 env:
-  S3_BUCKET_NAME: s3-classifier
-  CODE_DEPLOY_APPLICATION_NAME: CODE-DEPLOY-CLASSIFIER
+  S3_BUCKET_NAME: s3-tomato-analyzer
+  CODE_DEPLOY_APPLICATION_NAME: CODE-DEPLOY-ANALYZER
   CODE_DEPLOY_DEPLOYMENT_GROUP_NAME: CODE-DEPLOY-GROUP
 
 jobs:
