--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -6,9 +6,9 @@ on:
       - main
 
 env:
-  S3_BUCKET_NAME: s3-tomato-analyzer
-  CODE_DEPLOY_APPLICATION_NAME: CODE-DEPLOY-ANALYZER
-  CODE_DEPLOY_DEPLOYMENT_GROUP_NAME: CODE-DEPLOY-GROUP
+  S3_BUCKET_NAME: s3-analyzer-springboot
+  CODE_DEPLOY_APPLICATION_NAME: CODE-DEPLOY-DISEASE-ANALYZER
+  CODE_DEPLOY_DEPLOYMENT_GROUP_NAME: CODE-DEPLOY-ANALYZER-GROUP
 
 jobs:
   build:
