sql 로그 출력 설정

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -15,6 +15,7 @@ spring:
     open-in-view: false
     hibernate:
       ddl-auto: none
+      format_sql: true
     properties:
       '[hibernate.default_batch_fetch_size]': 100
 
