--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -18,7 +18,9 @@ spring:
       format_sql: true
     properties:
       '[hibernate.default_batch_fetch_size]': 100
-
+  sql:
+    init:
+      mode: always
 logging:
   level:
     tomato.tomato.classifier: debug
