--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -7,7 +7,7 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mariadb://${RDS_ENDPOINT}:${RDS_PORT}/${RDS_DB_NAME}?createDatabaseIfNotExist=true
+    url: jdbc:mariadb://${RDS_ENDPOINT}:${RDS_PORT}/${RDS_DB_NAME}?useUnicode=true&characterEncoding=utf8mb4
     driver-class-name: org.mariadb.jdbc.Driver
     username: ${RDS_USERNAME}
     password: ${RDS_PASSWORD}
